# Obsidian-Panel

./: .dockerignore  .env  .env.example  .env.microservices.example  .gitignore  Dockerfile  Dockerfile.java17  Dockerfile.java21  Dockerfile.java8  Dockerfile.microservices  Dockerfile2  LICENSE  README.md  api  backup_volume.sh  debug_hangar.js  docker-compose.microservices.yml  docker-compose.yml  install.sh  load-env.fish  migrate.sh  supervisord-all.conf  test_apis.js  test_java_logic.js  verify_schema.js  versions_cache.json
.github/workflows/: ci.yml  docker-build.yml
backend/: API_README.md  package-lock.json  package.json  server.js
backend-old/: .gitignore  server.js
backend-old/middleware/: auth.js
backend-old/models/: Backup.js
backend-old/routes/: auth.js
backend-old/services/: backupService.js
backend-rust/: Cargo.toml.backup  test_socket_logs.js
backend-rust-microservices/: .env.all-in-one  .env.example  .env.single  Cargo.toml  Dockerfile.all-in-one  Dockerfile.single  SINGLE_CONTAINER.md  docker-compose.local.yml  docker-compose.single.yml  docker-compose.yml  supervisord-all.conf  supervisord.conf
backend-rust-microservices/gateway/: Cargo.toml  Dockerfile
backend-rust-microservices/gateway/src/: config.rs  http_bridge.rs  main.rs  state.rs  ws_bridge.rs
backend-rust-microservices/shared/src/: messages.rs
backend-rust-microservices/worker/: Cargo.toml  Dockerfile
backend-rust-microservices/worker/src/: config.rs  http_handler.rs  main.rs  state.rs  ws_handler.rs
backend-rust/minecraft_server/: server.properties
backend-rust/src/: config.rs  error.rs  main.rs  state.rs
backend-rust/src/middleware/: auth.rs  mod.rs  permission.rs
backend-rust/src/models/: backup.rs  mod.rs  server_config.rs  settings.rs  user.rs
backend-rust/src/routes/: auth.rs  backups.rs  control.rs  mod.rs  plugins.rs  users.rs
backend-rust/src/services/: backup.rs  minecraft.rs  mod.rs  plugin.rs
backend/config/: createDefaultAdmin.js
backend/middleware/: auth.js  checkPermission.js  index.js
backend/models/: Backup.js  Server.js  ServerConfig.js  Settings.js  User.js
backend/public/: index.html
backend/public/assets/: index-CcUfBPaW.css  index-D_lIZfpt.js
backend/routes/: ai.js  auth.js  backups.js  control.js  files.js  plugins.js  server.js  servers.js  system.js  users.js
backend/services/: AICommandService.js  ServerManager.js  backupService.js  minecraftService.js  pluginService.js
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  config.js  index.css
frontend/src/api/: server.js
frontend/src/components/: CreateServerModal.css  CreateServerModal.jsx  DashboardLayout.jsx  DatePicker.jsx  Modal.jsx  PowerControls.jsx  PrivateRoute.jsx  RoleGuard.jsx  SearchableSelect.jsx  Select.jsx  ServerSelector.css  ServerSelector.jsx  Sidebar.css  Sidebar.jsx  StatCard.css  StatCard.jsx  TopBar.jsx
frontend/src/context/: AuthContext.jsx  ServerContext.jsx  Toast.css  ToastContext.jsx
frontend/src/pages/: Backups.jsx  Console.css  Console.jsx  Dashboard.css  Dashboard.jsx  FileManager.css  Files.jsx  (+15 more)
(+2 files in other folders)
