[workspace]
members = [
    "gateway",
    "worker",
    "shared",
]
resolver = "2"

[workspace.dependencies]
# ZeroMQ
zeromq = "0.4"

# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web Framework
axum = { version = "0.7", features = ["multipart", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "limit"] }

# Session Management
tower-sessions = "0.11.0"
tower-sessions-mongodb-store = "0.11.0"
time = "0.3"

# Database
mongodb = { version = "2.8", features = ["bson-chrono-0_4"] }
bson = { version = "2.9", features = ["chrono-0_4"] }

# Authentication
bcrypt = "0.15"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
parking_lot = "0.12"
once_cell = "1.19"
