[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
# Local
shared = { path = "../shared" }

# Workspace dependencies
zeromq = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-mongodb-store = { workspace = true }
time = { workspace = true }
mongodb = { workspace = true }
bson = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
