[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
# Local
shared = { path = "../shared" }

# Workspace dependencies
zeromq = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mongodb = { workspace = true }
bson = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }

# Additional dependencies for business logic
bcrypt = { workspace = true }
